--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "./server/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server/index.js",
-    "start": ""
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
